Replace placeholder data with loading indicators

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <body>
     <div class="card-container">
         <div class="video-banner">
-            <!-- Replace the src with your actual video URL -->
             <video autoplay muted loop playsinline id="bannerVideo">
-                <source src="YOUR_VIDEO_URL.mp4" type="video/mp4">
+                <source src="" type="video/mp4" id="videoSource">
             </video>
-            <!-- Placeholder shown if video fails to load -->
             <div class="video-placeholder" id="videoPlaceholder">
                 Video Banner
             </div>
@@ -21,41 +19,40 @@
 
         <div class="profile-section">
             <div class="profile-image">
-                <!-- Replace with actual profile image -->
                 <img src="https://via.placeholder.com/120" alt="Profile" id="profileImg">
             </div>
 
-            <h1 class="name" id="name">John Anderson</h1>
-            <p class="title" id="jobTitle">Chief Executive Officer</p>
-            <p class="company" id="companyName">Your Company Name</p>
+            <h1 class="name" id="name">Loading...</h1>
+            <p class="title" id="jobTitle">-</p>
+            <p class="company" id="companyName">-</p>
 
             <div class="contact-info">
                 <div class="contact-item">
                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                     </svg>
-                    <a href="mailto:john.anderson@company.com" id="email">john.anderson@company.com</a>
+                    <a href="mailto:" id="email">-</a>
                 </div>
 
                 <div class="contact-item">
                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
                     </svg>
-                    <a href="tel:+1234567890" id="phone">+1 (234) 567-890</a>
+                    <a href="tel:" id="phone">-</a>
                 </div>
 
                 <div class="contact-item">
                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                     </svg>
-                    <span id="address">123 Business St, City, State 12345</span>
+                    <span id="address">-</span>
                 </div>
 
                 <div class="contact-item">
                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M19.35 10.04C18.67 6.59 15.64 4 12 4c-1.48 0-2.85.43-4.01 1.17l1.46 1.46C10.21 6.23 11.08 6 12 6c3.04 0 5.5 2.46 5.5 5.5v.5H19c1.66 0 3 1.34 3 3 0 1.13-.64 2.11-1.56 2.62l1.45 1.45C23.16 18.16 24 16.68 24 15c0-2.64-2.05-4.78-4.65-4.96zM3 5.27l2.75 2.74C2.56 8.15 0 10.77 0 14c0 3.31 2.69 6 6 6h11.73l2 2L21 20.73 4.27 4 3 5.27zM7.73 10l8 8H6c-2.21 0-4-1.79-4-4s1.79-4 4-4h1.73z"/>
                     </svg>
-                    <a href="https://www.company.com" target="_blank" id="website">www.company.com</a>
+                    <a href="#" target="_blank" id="website">-</a>
                 </div>
             </div>
 
