Replace video banner with carousel component

--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
 </head>
 <body>
     <div class="card-container">
-        <div class="video-banner">
-            <video autoplay muted loop playsinline id="bannerVideo">
-                <source src="" type="video/mp4" id="videoSource">
-            </video>
-            <div class="video-placeholder" id="videoPlaceholder">
-                Video Banner
+        <div class="carousel-banner">
+            <div class="carousel-container">
+                <div class="carousel-slide" id="carouselSlide">
+                    <!-- Images will be loaded dynamically from JSON -->
+                </div>
+                <button class="carousel-btn prev" onclick="changeSlide(-1)" aria-label="Previous">
+                    <svg viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+                    </svg>
+                </button>
+                <button class="carousel-btn next" onclick="changeSlide(1)" aria-label="Next">
+                    <svg viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+                    </svg>
+                </button>
+            </div>
+            <div class="carousel-indicators" id="carouselIndicators">
+                <!-- Indicators will be generated dynamically -->
             </div>
         </div>
 
