Replace carousel with video banner in index.html

--- a/index.html
+++ b/index.html
@@ -8,24 +8,12 @@
 </head>
 <body>
     <div class="card-container">
-        <div class="carousel-banner">
-            <div class="carousel-container">
-                <div class="carousel-slide" id="carouselSlide">
-                    <!-- Images will be loaded dynamically from JSON -->
-                </div>
-                <button class="carousel-btn prev" onclick="changeSlide(-1)" aria-label="Previous">
-                    <svg viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-                    </svg>
-                </button>
-                <button class="carousel-btn next" onclick="changeSlide(1)" aria-label="Next">
-                    <svg viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
-                    </svg>
-                </button>
-            </div>
-            <div class="carousel-indicators" id="carouselIndicators">
-                <!-- Indicators will be generated dynamically -->
+        <div class="video-banner">
+            <video autoplay muted loop playsinline id="bannerVideo">
+                <source src="" type="video/mp4" id="videoSource">
+            </video>
+            <div class="video-placeholder" id="videoPlaceholder">
+                Video Banner
             </div>
         </div>
 
@@ -59,12 +47,30 @@
                     </svg>
                     <span id="address">-</span>
                 </div>
+            </div>
 
-                <div class="contact-item" id="websiteContainer" style="display: none;">
-                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M19.35 10.04C18.67 6.59 15.64 4 12 4c-1.48 0-2.85.43-4.01 1.17l1.46 1.46C10.21 6.23 11.08 6 12 6c3.04 0 5.5 2.46 5.5 5.5v.5H19c1.66 0 3 1.34 3 3 0 1.13-.64 2.11-1.56 2.62l1.45 1.45C23.16 18.16 24 16.68 24 15c0-2.64-2.05-4.78-4.65-4.96zM3 5.27l2.75 2.74C2.56 8.15 0 10.77 0 14c0 3.31 2.69 6 6 6h11.73l2 2L21 20.73 4.27 4 3 5.27zM7.73 10l8 8H6c-2.21 0-4-1.79-4-4s1.79-4 4-4h1.73z"/>
-                    </svg>
-                    <a href="#" target="_blank" id="website">-</a>
+            <!-- Dish Carousel -->
+            <div class="carousel-section">
+                <h3 class="carousel-title">Our Signature Dishes</h3>
+                <div class="carousel-banner">
+                    <div class="carousel-container">
+                        <div class="carousel-slide" id="carouselSlide">
+                            <!-- Images will be loaded dynamically from JSON -->
+                        </div>
+                        <button class="carousel-btn prev" onclick="changeSlide(-1)" aria-label="Previous">
+                            <svg viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+                            </svg>
+                        </button>
+                        <button class="carousel-btn next" onclick="changeSlide(1)" aria-label="Next">
+                            <svg viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="carousel-indicators" id="carouselIndicators">
+                        <!-- Indicators will be generated dynamically -->
+                    </div>
                 </div>
             </div>
 
